--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "jest",  
+    "test": "jest",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage",
-    "serve:ssr:ng-review": "node dist/ng-review/server/server.mjs"
+    "serve:ssr:ng-review": "node dist/ng-review/server/server.mjs",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -34,9 +35,12 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.14",
     "@types/node": "^18.18.0",
+    "angular-eslint": "19.3.0",
+    "eslint": "^9.23.0",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.5.4",
     "ts-node": "^10.9.2",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.2",
+    "typescript-eslint": "8.27.0"
   }
 }
