--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage",
     "serve:ssr:ng-review": "node dist/ng-review/server/server.mjs",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "format": "prettier --write .",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "**/*": [
+      "eslint --fix",
+      "prettier --write --ignore-unknown"
+    ]
   },
   "private": true,
   "dependencies": {
@@ -37,8 +45,14 @@
     "@types/node": "^18.18.0",
     "angular-eslint": "19.3.0",
     "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.5.4",
+    "lint-staged": "^15.5.1",
+    "prettier": "3.5.3",
+    "prettier-eslint": "^16.3.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.7.2",
     "typescript-eslint": "8.27.0"
