--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,13 +5,7 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "outDir": "./out-tsc/spec",
-    "types": [
-      "jest"
-    ]
+    "types": ["jest"]
   },
-  "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts",
-    "./setup-jest.ts"  
-  ]
+  "include": ["src/**/*.spec.ts", "src/**/*.d.ts", "./setup-jest.ts"]
 }
